# SDLGameProgramming

./: .gitignore  README.md
01_hello_SDL/: 01_hello_SDL.cpp  CMakeLists.txt
02_display_image/: 02_display_image.cpp  CMakeLists.txt
04_key_presses/: 04_key_presses.cpp
05_optimized_loading/: 05_optimized_loading.cpp
06_extension_libraries/: 06_loading_PNGs.cpp  CMakeLists.txt
07_texture_rendering/: 07_textureRendering.cpp  CMakeLists.txt
08_geometry_rendering/: 08_geometry_rendering.cpp  CMakeLists.txt
09_viewports/: 09_viewports.cpp  CMakeLists.txt
10_colour_keying/: 10_colour_keying.cpp  CMakeLists.txt  LTexture.cpp  LTexture.h  LWindow.cpp  LWindow.h  colours.h  customDeleter.h  main.cpp
Lesson_1-11/03_event_driven_programming/: 03_event_driven.cpp  CMakeLists.txt
Lesson_1-11/04_key_presses/: CMakeLists.txt
Lesson_1-11/05_optimized_loading/: CMakeLists.txt
Lesson_1-11/06_extension_libraries/: loadingPNG
Lesson_1-11/10_colour_keying/: CMakeLists.txt  LTexture.cpp  LTexture.h  LWindow.cpp  main.cpp
Lesson_1-11/11_clip_rendering/: CMakeLists.txt  LTexture.cpp  LTexture.h  LWindow.cpp  LWindow.h  SpriteSheetAreas.h  main.cpp
Lesson_12-22/12_colour_modulation/: CMakeLists.txt  LTexture.cpp  LTexture.h  LWindow.cpp  LWindow.h  main.cpp
Lesson_12-22/13_alpha_blending/: CMakeLists.txt  LTexture.cpp  LTexture.h  LWindow.cpp  LWindow.h  main.cpp
Lesson_12-22/14_animated_sprites/: CMakeLists.txt  LWindow.cpp  LWindow.h  customDeleter.h  globalConstants.h  main.cpp
Lesson_12-22/15_rotation_and_flipping/: CMakeLists.txt  LTexture.h  LWindow.cpp  main.cpp
Lesson_12-22/16_true_type_fonts/: CMakeLists.txt  LTexture.cpp  LTexture.h  LWindow.cpp  LWindow.h  customDeleter.h  main.cpp
Lesson_12-22/17_mouse_events/: CMakeLists.txt  LButton.cpp  LButton.h  LTexture.cpp  LTexture.h  LWindow.cpp  LWindow.h  buttonSprites.h  colours.h  customDeleter.h  globalConstants.h  main.cpp
Lesson_12-22/18_keystates/: CMakeLists.txt  LTexture.cpp  LWindow.cpp  LWindow.h  globalConstants.h  main.cpp
Lesson_12-22/19_gamepads/: CMakeLists.txt  LWindow.cpp  LWindow.h  customDeleter.h  globalConstants.h  main.cpp
